# Network-Security

./: .gitignore  Dockerfile  app.py  main.py  push_data.py  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: main.yml
final_models/: preprocessor.pkl
networksecurity/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
networksecurity/constants/training_pipeline/: __init__.py
networksecurity/entity/: artifact_entity.py  config_entity.py
networksecurity/exception/: exception.py
networksecurity/pipeline/: training_pipeline.py
networksecurity/utils/: common.py
networksecurity/utils/ml_utils/metric/: classification_metric.py
networksecurity/utils/ml_utils/model/: estimator.py
