[project]
name = "networksecurity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.2.25",
    "dill>=0.4.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyaml>=26.2.1",
    "pymongo[srv]==3.12",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
]
