[project]
name = "networksecurity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.2.25",
    "dagshub>=0.6.9",
    "dill>=0.4.1",
    "fastapi>=0.135.3",
    "mlflow==2.9.2",
    "numpy<2",
    "pandas<3",
    "protobuf==3.20.3",
    "pyaml>=26.2.1",
    "pymongo[srv]==3.12",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "setuptools==68.2.2",
    "uvicorn>=0.44.0",
]
